--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.1",
     "react-fontawesome": "^1.6.1",
+    "react-google-sheets": "^0.4.0",
     "react-responsive-carousel": "^3.1.46",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
