modal for map markers

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "npm test",
     "start": "react-scripts start",
+    "_start": "HOST=`hostname` react-scripts start",
     "build": "react-scripts build"
   },
   "author": "holt w.",
