--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.8.1",
     "react-fontawesome": "^1.6.1",
     "react-google-sheets": "^0.4.0",
+    "react-headroom": "^2.2.8",
     "react-responsive-carousel": "^3.1.46",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
