--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "aos": "^2.3.4",
+    "bootstrap": "^4.3.1",
     "google-map-react": "^1.1.2",
     "react": "^16.8.1",
     "react-bootstrap": "^1.0.0-beta.5",
